--- a/LeitorQRCode/Base.lproj/LaunchScreen.storyboard
+++ b/LeitorQRCode/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
@@ -15,12 +16,48 @@
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Recycle-points-icons.png" translatesAutoresizingMaskIntoConstraints="NO" id="dXe-ti-UnH">
+                                <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
+                            </imageView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="dXe-ti-UnH" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="0e0-BO-0Ju"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="dXe-ti-UnH" secondAttribute="bottom" constant="193" id="3v0-q0-ifi"/>
+                            <constraint firstItem="dXe-ti-UnH" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="31" id="455-Kg-DgI"/>
+                            <constraint firstItem="dXe-ti-UnH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="kBb-et-unc"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="dXe-ti-UnH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="0e0-BO-0Ju"/>
+                                <exclude reference="455-Kg-DgI"/>
+                                <exclude reference="kBb-et-unc"/>
+                                <exclude reference="3v0-q0-ifi"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="dXe-ti-UnH"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="0e0-BO-0Ju"/>
+                                <include reference="455-Kg-DgI"/>
+                                <include reference="kBb-et-unc"/>
+                                <include reference="3v0-q0-ifi"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="297" y="379"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Recycle-points-icons.png" width="1200" height="1200"/>
+    </resources>
 </document>
