--- a/iRecycle/Base.lproj/LaunchScreen.storyboard
+++ b/iRecycle/Base.lproj/LaunchScreen.storyboard
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" initialViewController="01J-lp-oVM">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Alignment constraints with different attributes" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -17,44 +18,44 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Recycle-points-icons.png" translatesAutoresizingMaskIntoConstraints="NO" id="dXe-ti-UnH">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Recycle-points-icons.png" translatesAutoresizingMaskIntoConstraints="NO" id="GfR-k9-fGt">
                                 <rect key="frame" x="0.0" y="0.0" width="240" height="128"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dXe-ti-UnH" firstAttribute="trailing" secondItem="Ze5-6b-2t3" secondAttribute="trailingMargin" id="0e0-BO-0Ju"/>
-                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="dXe-ti-UnH" secondAttribute="bottom" constant="193" id="3v0-q0-ifi"/>
-                            <constraint firstItem="dXe-ti-UnH" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="31" id="455-Kg-DgI"/>
-                            <constraint firstItem="dXe-ti-UnH" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" id="kBb-et-unc"/>
+                            <constraint firstItem="GfR-k9-fGt" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="128" id="SiZ-ke-6CC"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="GfR-k9-fGt" secondAttribute="trailing" constant="24" id="qV6-YX-dD7"/>
+                            <constraint firstItem="GfR-k9-fGt" firstAttribute="leading" secondItem="Ze5-6b-2t3" secondAttribute="leadingMargin" constant="25" id="vIG-a6-q47"/>
+                            <constraint firstItem="xb3-aO-Qok" firstAttribute="top" secondItem="GfR-k9-fGt" secondAttribute="bottom" constant="138" id="vTu-kN-nZo"/>
                         </constraints>
                         <variation key="default">
                             <mask key="subviews">
-                                <exclude reference="dXe-ti-UnH"/>
+                                <exclude reference="GfR-k9-fGt"/>
                             </mask>
                             <mask key="constraints">
-                                <exclude reference="0e0-BO-0Ju"/>
-                                <exclude reference="455-Kg-DgI"/>
-                                <exclude reference="kBb-et-unc"/>
-                                <exclude reference="3v0-q0-ifi"/>
+                                <exclude reference="vTu-kN-nZo"/>
+                                <exclude reference="SiZ-ke-6CC"/>
+                                <exclude reference="qV6-YX-dD7"/>
+                                <exclude reference="vIG-a6-q47"/>
                             </mask>
                         </variation>
                         <variation key="widthClass=compact">
                             <mask key="subviews">
-                                <include reference="dXe-ti-UnH"/>
+                                <include reference="GfR-k9-fGt"/>
                             </mask>
                             <mask key="constraints">
-                                <include reference="0e0-BO-0Ju"/>
-                                <include reference="455-Kg-DgI"/>
-                                <include reference="kBb-et-unc"/>
-                                <include reference="3v0-q0-ifi"/>
+                                <include reference="vTu-kN-nZo"/>
+                                <include reference="SiZ-ke-6CC"/>
+                                <include reference="qV6-YX-dD7"/>
+                                <include reference="vIG-a6-q47"/>
                             </mask>
                         </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="297" y="379"/>
+            <point key="canvasLocation" x="52.5" y="375"/>
         </scene>
     </scenes>
     <resources>
